[gd_scene load_steps=8 format=4 uid="uid://cp3uheuedlasm"]

[ext_resource type="Texture2D" uid="uid://b034j5tpwk87e" path="res://Background/Tiles/isometric-sandbox-32x32/isometric-sandbox-sheet.png" id="1_1yplk"]
[ext_resource type="Script" path="res://Background/Places/spring_tilemap.gd" id="1_lwbwx"]
[ext_resource type="Texture2D" uid="uid://chxxkxphse7e5" path="res://Characters/Arachne.png" id="2_7pqvk"]
[ext_resource type="PackedScene" uid="uid://cxkxuqs5bc1r" path="res://Characters/chosen_character.tscn" id="4_eyd54"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_beok4"]
texture = ExtResource("1_1yplk")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -8)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -8)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -8)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -8)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -8)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -8)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -8)
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, -8)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, -8)
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, -8)
4:1/0 = 0
4:1/0/texture_origin = Vector2i(0, -8)
5:1/0 = 0
5:1/0/texture_origin = Vector2i(0, -8)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -8)
1:2/0 = 0
1:2/0/texture_origin = Vector2i(0, -8)
2:2/0 = 0
2:2/0/texture_origin = Vector2i(0, -8)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(0, -8)
4:2/0 = 0
4:2/0/texture_origin = Vector2i(0, -8)
5:2/0 = 0
5:2/0/texture_origin = Vector2i(0, -8)
0:3/0 = 0
0:3/0/texture_origin = Vector2i(0, -8)
1:3/0 = 0
1:3/0/texture_origin = Vector2i(0, -8)
2:3/0 = 0
2:3/0/texture_origin = Vector2i(0, -8)
3:3/0 = 0
3:3/0/texture_origin = Vector2i(0, -8)
4:3/0 = 0
4:3/0/texture_origin = Vector2i(0, -8)
5:3/0 = 0
5:3/0/texture_origin = Vector2i(0, -8)
0:4/0 = 0
0:4/0/texture_origin = Vector2i(0, -8)
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, -8)
2:4/0 = 0
2:4/0/texture_origin = Vector2i(0, -8)
3:4/0 = 0
3:4/0/texture_origin = Vector2i(0, -8)
4:4/0 = 0
4:4/0/texture_origin = Vector2i(0, -8)
5:4/0 = 0
5:4/0/texture_origin = Vector2i(0, -8)
4:5/0 = 0
4:5/0/texture_origin = Vector2i(0, -8)
5:5/0 = 0
5:5/0/texture_origin = Vector2i(0, -8)
0:6/0 = 0
0:6/0/texture_origin = Vector2i(0, -8)
1:6/0 = 0
1:6/0/texture_origin = Vector2i(0, -8)
2:6/0 = 0
2:6/0/texture_origin = Vector2i(0, -8)
3:6/0 = 0
3:6/0/texture_origin = Vector2i(0, -8)
4:6/0 = 0
4:6/0/texture_origin = Vector2i(0, -8)
5:6/0 = 0
5:6/0/texture_origin = Vector2i(0, -8)
0:7/0 = 0
0:7/0/texture_origin = Vector2i(0, -8)
1:7/0 = 0
1:7/0/texture_origin = Vector2i(0, -8)
2:7/0 = 0
2:7/0/texture_origin = Vector2i(0, -8)
3:7/0 = 0
3:7/0/texture_origin = Vector2i(0, -8)
4:7/0 = 0
4:7/0/texture_origin = Vector2i(0, -8)
5:7/0 = 0
5:7/0/texture_origin = Vector2i(0, -8)
0:8/0 = 0
0:8/0/texture_origin = Vector2i(0, -8)
1:8/0 = 0
1:8/0/texture_origin = Vector2i(0, -8)
4:8/0 = 0
4:8/0/texture_origin = Vector2i(0, -8)
5:8/0 = 0
5:8/0/texture_origin = Vector2i(0, -8)
0:5/0 = 0
0:5/0/texture_origin = Vector2i(0, -8)
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0

[sub_resource type="TileSet" id="TileSet_fsc20"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_beok4")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pvsp0"]
radius = 58.0081
height = 215.956

[node name="Spring" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_lwbwx")
setting_given = 2

[node name="Ground3" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7/wAAAQABAAMAAAD7////AQABAAMAAAD7//7/AQABAAMAAAD8//3/AQABAAMAAAD8//7/AQABAAMAAAD8////AQABAAMAAAD9////AQABAAMAAAD9/wAAAQABAAMAAAD9/wEAAQABAAMAAAD8/wEAAQABAAMAAAD8/wAAAQABAAMAAAD9/wIAAQABAAMAAAD+/wIAAQABAAMAAAD//wIAAQABAAMAAAD//wEAAQABAAMAAAD//wAAAQABAAMAAAD+/wAAAQABAAMAAAD+////AQABAAMAAAD9//7/AQABAAMAAAD9//3/AQABAAMAAAD9//z/AQABAAMAAAD9//v/AQABAAMAAAD9//r/AQABAAMAAAD+//z/AQABAAMAAAD+//3/AQABAAMAAAD+//7/AQABAAMAAAD+/wEAAQABAAMAAAD+//v/AQABAAMAAAD///z/AQABAAMAAAD///3/AQABAAMAAAAAAP7/AQABAAMAAAAAAP//AQABAAMAAAABAAAAAQABAAMAAAABAAEAAQABAAMAAAABAAIAAQABAAMAAAAAAAIAAQABAAMAAAAAAP3/AQABAAMAAAABAP7/AQABAAMAAAABAP//AQABAAMAAAACAAAAAQABAAMAAAACAAEAAQABAAMAAAACAAIAAQABAAMAAAAAAAEAAQABAAMAAAD/////AQABAAMAAAD///7/AQABAAMAAAAAAAAAAQABAAMAAAAAAPz/AQABAAMAAAABAPz/AQABAAMAAAABAP3/AQABAAMAAAACAP3/AQABAAMAAAACAP7/AQABAAMAAAACAP//AQABAAMAAAD6//r/AQABAAMAAAD6//v/AQABAAMAAAD6//z/AQABAAMAAAD6//3/AQABAAMAAAD6//7/AQABAAMAAAD6////AQABAAMAAAD6/wAAAQABAAMAAAD6/wEAAQABAAMAAAD6/wIAAQABAAMAAAD7//r/AQABAAMAAAD7//v/AQABAAMAAAD7//z/AQABAAMAAAD7//3/AQABAAMAAAD7/wEAAQABAAMAAAD7/wIAAQABAAMAAAD8//r/AQABAAMAAAD8//v/AQABAAMAAAD8//z/AQABAAMAAAD8/wIAAQABAAMAAAD+//r/AQABAAMAAAD///r/AQABAAMAAAD///v/AQABAAMAAAAAAPr/AQABAAMAAAAAAPv/AQABAAMAAAABAPr/AQABAAMAAAABAPv/AQABAAMAAAACAPr/AQABAAMAAAACAPv/AQABAAMAAAACAPz/AQABAAMAAAADAPr/AQABAAMAAAADAPv/AQABAAMAAAADAPz/AQABAAMAAAADAP3/AQABAAMAAAADAP7/AQABAAMAAAADAP//AQABAAMAAAADAAAAAQABAAMAAAADAAEAAQABAAMAAAADAAIAAQABAAMAAAAEAPr/AQABAAMAAAAEAPv/AQABAAMAAAAEAPz/AQABAAMAAAAEAP3/AQABAAMAAAAEAP7/AQABAAMAAAAEAP//AQABAAMAAAAEAAAAAQABAAMAAAAEAAEAAQABAAMAAAAEAAIAAQABAAMAAAAFAPr/AQABAAMAAAAFAPv/AQABAAMAAAAFAPz/AQABAAMAAAAFAP3/AQABAAMAAAAFAP7/AQABAAMAAAAFAP//AQABAAMAAAAFAAAAAQABAAMAAAAFAAEAAQABAAMAAAAFAAIAAQABAAMAAAA=")
tile_set = SubResource("TileSet_fsc20")

[node name="Ground4" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7/wAAAQAAAAIAAAD7////AQAAAAIAAAD7//7/AQAAAAIAAAD8//3/AQAAAAIAAAD8//7/AQAAAAIAAAD8////AQAAAAIAAAD9////AQAAAAIAAAD9/wAAAQAAAAIAAAD9/wEAAQAAAAIAAAD8/wEAAQAAAAIAAAD8/wAAAQAAAAIAAAD9/wIAAQAAAAIAAAD+/wIAAQAAAAIAAAD//wIAAQAAAAIAAAD//wEAAQAAAAIAAAD//wAAAQAAAAIAAAD+/wAAAQAAAAIAAAD+////AQAAAAIAAAD9//7/AQAAAAIAAAD9//3/AQAAAAIAAAD9//z/AQAAAAIAAAD9//v/AQAAAAIAAAD9//r/AQAAAAIAAAD+//z/AQAAAAIAAAD+//3/AQAAAAIAAAD+//7/AQAAAAIAAAD+/wEAAQAAAAIAAAD+//v/AQAAAAIAAAD///z/AQAAAAIAAAD///3/AQAAAAIAAAAAAP7/AQAAAAIAAAAAAP//AQAAAAIAAAABAAAAAQAAAAIAAAABAAEAAQAAAAIAAAABAAIAAQAAAAIAAAAAAAIAAQAAAAIAAAAAAP3/AQAAAAIAAAABAP7/AQAAAAIAAAABAP//AQAAAAIAAAACAAAAAQAAAAIAAAACAAEAAQAAAAIAAAACAAIAAQAAAAIAAAAAAAEAAQAAAAIAAAD/////AQAAAAIAAAD///7/AQAAAAIAAAAAAAAAAQAAAAIAAAAAAPz/AQAAAAIAAAABAPz/AQAAAAIAAAABAP3/AQAAAAIAAAACAP3/AQAAAAIAAAACAP7/AQAAAAIAAAACAP//AQAAAAIAAAD5//r/AQAAAAIAAAD5//v/AQAAAAIAAAD5//z/AQAAAAIAAAD5//3/AQAAAAIAAAD5//7/AQAAAAIAAAD5////AQAAAAIAAAD5/wAAAQAAAAIAAAD5/wEAAQAAAAIAAAD5/wIAAQAAAAIAAAD5/wMAAQAAAAIAAAD6//r/AQAAAAIAAAD6//v/AQAAAAIAAAD6//z/AQAAAAIAAAD6//3/AQAAAAIAAAD6//7/AQAAAAIAAAD6////AQAAAAIAAAD6/wAAAQAAAAIAAAD6/wEAAQAAAAIAAAD6/wIAAQAAAAIAAAD6/wMAAQAAAAIAAAD7//r/AQAAAAIAAAD7//v/AQAAAAIAAAD7//z/AQAAAAIAAAD7//3/AQAAAAIAAAD7/wEAAQAAAAIAAAD7/wIAAQAAAAIAAAD7/wMAAQAAAAIAAAD8//r/AQAAAAIAAAD8//v/AQAAAAIAAAD8//z/AQAAAAIAAAD8/wIAAQAAAAIAAAD8/wMAAQAAAAIAAAD9/wMAAQAAAAIAAAD+//r/AQAAAAIAAAD+/wMAAQAAAAIAAAD///r/AQAAAAIAAAD///v/AQAAAAIAAAD//wMAAQAAAAIAAAAAAPr/AQAAAAIAAAAAAPv/AQAAAAIAAAAAAAMAAQAAAAIAAAABAPr/AQAAAAIAAAABAPv/AQAAAAIAAAABAAMAAQAAAAIAAAACAPr/AQAAAAIAAAACAPv/AQAAAAIAAAACAPz/AQAAAAIAAAACAAMAAQAAAAIAAAADAPr/AQAAAAIAAAADAPv/AQAAAAIAAAADAPz/AQAAAAIAAAADAP3/AQAAAAIAAAADAP7/AQAAAAIAAAADAP//AQAAAAIAAAADAAAAAQAAAAIAAAADAAEAAQAAAAIAAAADAAIAAQAAAAIAAAADAAMAAQAAAAIAAAA=")
tile_set = SubResource("TileSet_fsc20")

[node name="Ground2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD2//n/AQAAAAAAAAD2//r/AQAAAAAAAAD2//v/AQAAAAAAAAD2//z/AQAAAAAAAAD2//3/AQAAAAAAAAD2//7/AQAAAAAAAAD2////AQAAAAAAAAD2/wAAAQAAAAAAAAD2/wEAAQAAAAAAAAD2/wIAAQAAAAAAAAD2/wMAAQAAAAAAAAD2/wQAAQAAAAAAAAD2/wUAAQAAAAAAAAD2/wYAAQAAAAAAAAD2/wcAAQAAAAAAAAD2/wgAAQAAAAAAAAD3//n/AQAAAAAAAAD3//r/AQAAAAAAAAD3//v/AQAAAAAAAAD3//z/AQAAAAAAAAD3//3/AQAAAAAAAAD3//7/AQAAAAAAAAD3////AQAAAAAAAAD3/wAAAQAAAAAAAAD3/wEAAQAAAAAAAAD3/wIAAQAAAAAAAAD3/wMAAQAAAAAAAAD3/wQAAQAAAAAAAAD3/wUAAQAAAAAAAAD3/wYAAQAAAAAAAAD3/wcAAQAAAAAAAAD3/wgAAQAAAAAAAAD4//n/AQAAAAAAAAD4//r/AQAAAAAAAAD4//v/AQAAAAAAAAD4//z/AQAAAAAAAAD4//3/AQAAAAAAAAD4//7/AQAAAAAAAAD4////AQAAAAAAAAD4/wAAAQAAAAAAAAD4/wEAAQAAAAAAAAD4/wIAAQAAAAAAAAD4/wMAAQAAAAAAAAD4/wQAAQAAAAAAAAD4/wUAAQAAAAAAAAD4/wYAAQAAAAAAAAD4/wcAAQAAAAAAAAD4/wgAAQAAAAAAAAD5//n/AQAAAAAAAAD5//r/AQAAAAAAAAD5//v/AQAAAAAAAAD5//z/AQAAAAAAAAD5//3/AQAAAAAAAAD5//7/AQAAAAAAAAD5////AQAAAAAAAAD5/wAAAQAAAAAAAAD5/wEAAQAAAAAAAAD5/wIAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wQAAQAAAAAAAAD5/wUAAQAAAAAAAAD5/wYAAQAAAAAAAAD5/wcAAQAAAAAAAAD5/wgAAQAAAAAAAAD6//n/AQAAAAAAAAD6//r/AQAAAAAAAAD6//v/AQAAAAAAAAD6//z/AQAAAAAAAAD6//3/AQAAAAAAAAD6//7/AQAAAAAAAAD6////AQAAAAAAAAD6/wAAAQAAAAAAAAD6/wEAAQAAAAAAAAD6/wIAAQAAAAAAAAD6/wMAAQAAAAAAAAD6/wQAAQAAAAAAAAD6/wUAAQAAAAAAAAD6/wYAAQAAAAAAAAD6/wcAAQAAAAAAAAD6/wgAAQAAAAAAAAD7//n/AQAAAAAAAAD7//r/AQAAAAAAAAD7//v/AQAAAAAAAAD7//z/AQAAAAAAAAD7//3/AQAAAAAAAAD7//7/AQAAAAIAAAD7////AQAAAAIAAAD7/wAAAQAAAAIAAAD7/wEAAQAAAAAAAAD7/wIAAQAAAAAAAAD7/wMAAQAAAAAAAAD7/wQAAQAAAAAAAAD7/wUAAQAAAAAAAAD7/wYAAQAAAAAAAAD7/wcAAQAAAAAAAAD7/wgAAQAAAAAAAAD8//n/AQAAAAAAAAD8//r/AQAAAAAAAAD8//v/AQAAAAAAAAD8//z/AQAAAAAAAAD8//3/AQAAAAIAAAD8//7/AQAAAAIAAAD8////AQAAAAIAAAD8/wAAAQAAAAIAAAD8/wEAAQAAAAIAAAD8/wIAAQAAAAAAAAD8/wMAAQAAAAAAAAD8/wQAAQAAAAAAAAD8/wUAAQAAAAAAAAD8/wYAAQAAAAAAAAD8/wcAAQAAAAAAAAD8/wgAAQAAAAAAAAD9//n/AQAAAAAAAAD9//r/AQAAAAAAAAD9//v/AQAAAAAAAAD9//z/AQAAAAIAAAD9//3/AQAAAAIAAAD9//7/AQAAAAIAAAD9////AQAAAAIAAAD9/wAAAQAAAAIAAAD9/wEAAQAAAAIAAAD9/wIAAQAAAAIAAAD9/wMAAQAAAAAAAAD9/wQAAQAAAAAAAAD9/wUAAQAAAAAAAAD9/wYAAQAAAAAAAAD9/wcAAQAAAAAAAAD9/wgAAQAAAAAAAAD+//n/AQAAAAAAAAD+//r/AQAAAAAAAAD+//v/AQAAAAAAAAD+//z/AQAAAAIAAAD+//3/AQAAAAIAAAD+//7/AQAAAAIAAAD+////AQAAAAIAAAD+/wAAAQAAAAIAAAD+/wEAAQAAAAIAAAD+/wIAAQAAAAIAAAD+/wMAAQAAAAAAAAD+/wQAAQAAAAAAAAD+/wUAAQAAAAAAAAD+/wYAAQAAAAAAAAD+/wcAAQAAAAAAAAD+/wgAAQAAAAAAAAD///n/AQAAAAAAAAD///r/AQAAAAAAAAD///v/AQAAAAAAAAD///z/AQAAAAIAAAD///3/AQAAAAIAAAD///7/AQAAAAIAAAD/////AQAAAAIAAAD//wAAAQAAAAIAAAD//wEAAQAAAAIAAAD//wIAAQAAAAIAAAD//wMAAQAAAAAAAAD//wQAAQAAAAAAAAD//wUAAQAAAAAAAAD//wYAAQAAAAAAAAD//wcAAQAAAAAAAAD//wgAAQAAAAAAAAAAAPn/AQAAAAAAAAAAAPr/AQAAAAAAAAAAAPv/AQAAAAAAAAAAAPz/AQAAAAAAAAAAAP3/AQAAAAIAAAAAAP7/AQAAAAIAAAAAAP//AQAAAAIAAAAAAAAAAQAAAAIAAAAAAAEAAQAAAAIAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAABAPn/AQAAAAAAAAABAPr/AQAAAAAAAAABAPv/AQAAAAAAAAABAPz/AQAAAAAAAAABAP3/AQAAAAAAAAABAP7/AQAAAAIAAAABAP//AQAAAAIAAAABAAAAAQAAAAIAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAACAPn/AQAAAAAAAAACAPr/AQAAAAAAAAACAPv/AQAAAAAAAAACAPz/AQAAAAAAAAACAP3/AQAAAAAAAAACAP7/AQAAAAAAAAACAP//AQAAAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAAAAAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAADAPn/AQAAAAAAAAADAPr/AQAAAAAAAAADAPv/AQAAAAAAAAADAPz/AQAAAAAAAAADAP3/AQAAAAAAAAADAP7/AQAAAAAAAAADAP//AQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAAEAPn/AQAAAAAAAAAEAPr/AQAAAAAAAAAEAPv/AQAAAAAAAAAEAPz/AQAAAAAAAAAEAP3/AQAAAAAAAAAEAP7/AQAAAAAAAAAEAP//AQAAAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAFAPn/AQAAAAAAAAAFAPr/AQAAAAAAAAAFAPv/AQAAAAAAAAAFAPz/AQAAAAAAAAAFAP3/AQAAAAAAAAAFAP7/AQAAAAAAAAAFAP//AQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAGAPn/AQAAAAAAAAAGAPr/AQAAAAAAAAAGAPv/AQAAAAAAAAAGAPz/AQAAAAAAAAAGAP3/AQAAAAAAAAAGAP7/AQAAAAAAAAAGAP//AQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAPn/AQAAAAAAAAAHAPr/AQAAAAAAAAAHAPv/AQAAAAAAAAAHAPz/AQAAAAAAAAAHAP3/AQAAAAAAAAAHAP7/AQAAAAAAAAAHAP//AQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAIAPn/AQAAAAAAAAAIAPr/AQAAAAAAAAAIAPv/AQAAAAAAAAAIAPz/AQAAAAAAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAIAP//AQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAD2//j/AQAAAAAAAAD3//j/AQAAAAAAAAD4//j/AQAAAAAAAAD5//j/AQAAAAAAAAD6//j/AQAAAAAAAAD7//j/AQAAAAAAAAD8//j/AQAAAAAAAAD9//j/AQAAAAAAAAD+//j/AQAAAAAAAAD///j/AQAAAAAAAAAAAPj/AQAAAAAAAAABAPj/AQAAAAAAAAACAPj/AQAAAAAAAAADAPj/AQAAAAAAAAAEAPj/AQAAAAAAAAAFAPj/AQAAAAAAAAAGAPj/AQAAAAAAAAAHAPj/AQAAAAAAAAAIAPj/AQAAAAAAAAD2/wkAAQAAAAAAAAD3/wkAAQAAAAAAAAD4/wkAAQAAAAAAAAD5/wkAAQAAAAAAAAD6/wkAAQAAAAAAAAD7/wkAAQAAAAAAAAD8/wkAAQAAAAAAAAD9/wkAAQAAAAAAAAD+/wkAAQAAAAAAAAD//wkAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAQAAAAAAAAACAAkAAQAAAAAAAAADAAkAAQAAAAAAAAAEAAkAAQAAAAAAAAAFAAkAAQAAAAAAAAAGAAkAAQAAAAAAAAAHAAkAAQAAAAAAAAAIAAkAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_fsc20")

[node name="Ground5" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7/wEAAQAAAAMAAAD8/wIAAQAAAAMAAAD9/wIAAQABAAMAAAD//wEAAQABAAMAAAD//wIAAQABAAMAAAAAAAAAAQABAAMAAAABAP7/AQABAAMAAAAAAPz/AQABAAMAAAD9//r/AQABAAMAAAD8//r/AQABAAMAAAD7//v/AQABAAMAAAD6//z/AQABAAMAAAD5////AQABAAMAAAD5//7/AQABAAMAAAD6/wAAAQAEAAUAAAD+/wIAAQAAAAMAAAAAAAEAAQAAAAMAAAABAP//AQAAAAMAAAABAP3/AQAAAAMAAAD///v/AQAAAAMAAAD+//r/AQAEAAUAAAD5//3/AQAFAAQAAAD5//v/AQAFAAQAAAD6//v/AQAAAAMAAAD5//z/AQAAAAMAAAABAPz/AQAAAAMAAAAAAPv/AQAEAAQAAAAAAAIAAQAAAAMAAAABAAAAAQAAAAMAAAD7//r/AQAAAAMAAAA=")
tile_set = SubResource("TileSet_fsc20")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4.5, -22)
rotation = -1.58375
shape = SubResource("CapsuleShape2D_pvsp0")

[node name="given" type="Button" parent="Area2D"]
offset_left = -93.0
offset_top = -79.0
offset_right = 92.0
offset_bottom = 31.0
flat = true

[node name="Arachne" type="Sprite2D" parent="."]
position = Vector2(0, 98.5)
texture = ExtResource("2_7pqvk")

[node name="Button" type="Button" parent="Arachne"]
offset_left = -11.0
offset_top = -16.0
offset_right = 12.0
offset_bottom = 13.0
flat = true

[node name="ChosenCharacter" parent="." instance=ExtResource("4_eyd54")]
position = Vector2(192.5, -15)

[connection signal="pressed" from="Area2D/given" to="." method="_on_given_pressed"]
[connection signal="pressed" from="Arachne/Button" to="." method="_on_button_pressed"]
[connection signal="talk" from="ChosenCharacter" to="." method="_on_chosen_character_talk"]
